<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="#CBE4DE"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_movie_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/movie_title"
        android:textColor="#2E4F4F"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/dialog_movie_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="dialog movie image"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/dialog_number_picker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/select_tickets"
        android:textColor="#2E4F4F"
        android:textSize="18sp" />

    <NumberPicker
        android:id="@+id/dialog_number_picker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/dialog_date_picker_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/select_date"
        android:textColor="#2E4F4F"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_payment_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/payment_method"
        android:textColor="#2E4F4F"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/payment_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#024CAF50"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/payment_credit_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method_1"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/payment_paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method_2"
            android:textSize="14sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/dialog_total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/total_price"
        android:textColor="#2E4F4F"
        android:textSize="18sp" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2E4F4F"
        android:text="@string/submit"
        android:textColor="#CBE4DE" />


</LinearLayout>